--- a/project/app/templates/home/index.html
+++ b/project/app/templates/home/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="w-full h-[100%] flex flex-col items-center justify-center content-center space-y-3 ">
-                <p class="text-[#db0445] font-bold text-6xl w-[90rem] text-center csma ">COLLEGE STUDENT MONITORING <br> SYSTEM</p>
+                <p class="text-[#db0445] font-bold text-6xl w-[90rem] text-center csma ">COLLEGE STUDENT MANAGEMENT <br> SYSTEM</p>
                 <p class="text-[white]  text-3xl w-[60rem] text-center ">Better education in a better way</p>
                 <a class="border-2 border-[#db0445] flex rounded-3xl px-5 py-3 text-white justify-between hover:bg-[#db0445] duration-200 ease-in transition" type="button" href="#abt" ><span>About</span><span class="ml-5">>></span></a>
             </div>
