--- a/project/app/templates/register/login.html
+++ b/project/app/templates/register/login.html
@@ -39,7 +39,7 @@
             <div class="block relative">
                 <label for="username"
                     class="block text-gray-200 cursor-text text-sm leading-[140%] font-normal mb-2">Username</label>
-                <input autocomplete="off" name="username" type="text" id="username"
+                <input autocomplete="new-username" name="username" type="text" id="username" value=" "
                     class="rounded border border-gray-200 text-sm w-full font-normal leading-[18px] text-black tracking-[0px] appearance-none block h-11 m-0 p-[11px] focus:ring-2 ring-offset-2  ring-gray-900 outline-0">
 
 
@@ -74,6 +74,8 @@
     </div>
 </body>
 <script>
+    
+    
     // Get the password input field and the button
     var passwordField = document.getElementById("password");
     var toggleButton = document.getElementById("togglePasswordVisibility");
